syntax = "proto3";
package proto;

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";


option go_package = ".;proto";

service UtilAPI{
    rpc Decrypt(DecryptRequest) returns (google.protobuf.StringValue){
        option (google.api.http) = {
              get: "/util/decrypt"
         };
    }

    rpc Encrypt(EncryptRequest) returns (google.protobuf.StringValue){
        option (google.api.http) = {
              get: "/util/encrypt"
         };
    }

    rpc RawToBalance(RawBalance) returns (google.protobuf.FloatValue){
        option (google.api.http) = {
              get: "/util/rawToBalance"
         };
    }

    rpc BalanceToRaw(RawBalance) returns (google.protobuf.Int64Value){
        option (google.api.http) = {
              get: "/util/balanceToRaw"
         };
    }
}

message DecryptRequest{
    string cryptograph = 1;
    string passphrase  = 2;
}

message EncryptRequest{
    string raw         = 1;
    string passphrase  = 2;
}

message RawBalance{
    int64  balance   = 1;
    string unit    = 2;
    string tokenName = 3;
}
